# stone

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  LICENSE  Makefile  PLAN.md  PROJECT_PLAN.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  e2e.yml  preview-cleanup.yml  preview-deploy.yml  staging-deploy.yml
contracts/factory/: Cargo.toml
contracts/factory/src/: contract.rs  error.rs  execute.rs  lib.rs  query.rs  state.rs
contracts/factory/tests/: integration.rs
contracts/market/: Cargo.toml
contracts/market/src/: contract.rs  error.rs  health.rs  interest.rs  lib.rs  math256.rs  query.rs  state.rs
contracts/market/src/execute/: admin.rs  borrow.rs  collateral.rs  liquidate.rs  mod.rs  repay.rs  supply.rs  withdraw.rs
contracts/mock-oracle/: Cargo.toml
contracts/mock-oracle/src/: lib.rs
contracts/mock-pyth/: Cargo.toml
contracts/mock-pyth/src/: lib.rs
contracts/pyth-oracle-adapter/: Cargo.toml  README.md
contracts/pyth-oracle-adapter/examples/: schema.rs
contracts/pyth-oracle-adapter/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/pyth-oracle-adapter/src/: contract.rs  error.rs  lib.rs  msg.rs  pyth_types.rs  state.rs
contracts/pyth-oracle-adapter/tests/: integration.rs
deploy/: Caddyfile  docker-compose.prod.yml  env.example  local.json  neutron-1.json  neutron-mainnet.json  neutron-testnet.json  pion-1.json
docs/: DEPLOYMENT.md  E2E_TESTING_SPEC.md  EVENTS_REFERENCE.md  FRONTEND_PLAN.md  INDEXER_PLAN.md  README.md  REVIEW_AND_PLAN.md  REVIEW_AND_PLAN_COMBINED.md  REVIEW_AND_PLAN_VALIDATION.md  REVIEW_VALIDATION.md  create-market-spec.md  oracle-architecture.md  preview-environments.md  pyth-deployment.md  pyth-integration-research.md
docs/research/: oracle-handling-audit.md
e2e/: .gitignore  Dockerfile.deployer  README.md  docker-compose.e2e.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: mock-oracle-prices.ts  test-accounts.ts  test-markets.ts
e2e/scripts/: cleanup.ts  copy-deployment-env.ts  deploy-contracts.ts  init-chain.sh  setup-test-data.ts  wait-for-services.ts
e2e/tests/indexer/: graphql-queries.spec.ts  graphql-schema-validation.spec.ts
e2e/tests/integration/: full-lending-flow.spec.ts  pyth-mock-flow.spec.ts
e2e/tests/markets/: list-markets.spec.ts  market-detail.spec.ts
e2e/tests/smoke/: health.spec.ts
e2e/utils/: assertions.ts  chain-client.ts  graphql-client.ts  pyth-mock.ts  wallet-mock.ts
frontend/: Dockerfile.e2e  README.md  codegen.ts  eslint.config.mjs  package-lock.json  package.json  types.ts  vitest.config.ts
frontend/__tests__/utils/: position.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/faucet/: page.tsx
frontend/app/markets/: page.tsx
frontend/components/faucet/: FaucetCard.tsx
frontend/components/layout/: Header.tsx
frontend/components/markets/: HealthFactor.tsx  LtvHealthBar.tsx  MarketCard.tsx  MarketsFilter.tsx  MarketsTable.tsx  PositionSummary.tsx
frontend/components/modals/: BorrowModal.tsx  DepositModal.tsx  RepayModal.tsx  WithdrawCollateralModal.tsx  WithdrawModal.tsx
frontend/components/transactions/: TransactionHistoryDropdown.tsx  TransactionItem.tsx
frontend/components/ui/: slider.tsx  table.tsx  tabs.tsx  token-icon.tsx
frontend/doc/: advanced-tab-data-analysis.md
frontend/hooks/: useBalance.ts  useMarketSnapshots.ts  useMarkets.ts  useMarketsWithPositions.ts  useOracleQuery.ts  usePythPrices.ts  useTransactions.ts  useUserPosition.ts
frontend/lib/: providers.tsx
frontend/lib/constants/: contracts.ts  faucet.ts  faucetClient.ts  faucetServer.ts
frontend/lib/contexts/: TransactionContext.tsx
frontend/lib/cosmjs/: client.ts  wallet.tsx
frontend/lib/graphql/: client.ts  queries.ts
frontend/lib/mock/: advanced-tab-data.ts
frontend/lib/pyth/: client.ts  config.ts  index.ts  messages.ts  withPriceUpdate.ts
frontend/lib/utils/: collateral-risk.test.ts  collateral-risk.ts  denom-registry.test.ts  denom-registry.ts  denom.ts  format.ts  irm.test.ts  irm.ts  position.ts
frontend/types/: contracts.ts  index.ts
indexer/: .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  PHASE_3_COMPLETE.md  QUICKSTART.md  README.md  TESTING.md  TESTING_SPEC.md  package.json  vitest.config.ts
indexer/docs/: API_ARCHITECTURE.md  API_DESIGN.md  API_OVERVIEW.md  EVENT_DETECTION.md
indexer/prisma/: schema.prisma
indexer/src/: index.ts
indexer/src/api/: README.md  context.ts  scalars.ts  schema.graphql  server.ts
indexer/src/config/: index.ts
indexer/src/db/: client.ts
indexer/src/events/: handlers.ts  parser.ts  types.ts
indexer/src/indexer/: block-processor.ts  snapshot-pruning.ts
indexer/src/utils/: blockchain.ts  logger.ts
indexer/tests/: setup.ts
indexer/tests/helpers/: assertions.ts  events.ts  fixtures.ts  index.ts  mocks.ts
indexer/tests/integration/: block-processor.test.ts  reorg-handling.test.ts
indexer/tests/scenarios/: lending-flow.test.ts  liquidation-flow.test.ts  multi-market.test.ts  multi-user.test.ts
indexer/tests/unit/: parser.test.ts
isolated-markets-project/: ARCHITECTURE_DECISIONS.md  ARCHITECTURE_DIAGRAMS.md  CONTRACTS_NEEDED.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md
isolated-markets-project/contracts-reference/mock-oracle/: contract.rs  msg.rs
isolated-markets-project/contracts-reference/oracle-base/: contract.rs  error.rs
isolated-markets-project/contracts-reference/red-bank/: error.rs  helpers.rs  interest_rates.rs  liquidate.rs  state.rs  withdraw.rs
isolated-markets-project/docs/: FACTORY_PATTERN_CHANGES.md  ISOLATED_MARKETS_IMPLEMENTATION_GUIDE.md  ISOLATED_MARKETS_SPEC.md  ISOLATED_MARKETS_TECHNICAL_ARCHITECTURE.md
lib/constants/: contracts.ts
lib/cosmjs/: client.ts  wallet.tsx
lib/utils/: format.ts
memory/: 2026-02-05.md
scripts/: coverage.sh  optimize.sh  pre-commit.sh  schema.sh
scripts/preview/: hetzner.sh  setup-vm.sh
types/: index.ts
(+33 files in other folders)
