[package]
name = "mock-pyth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock Pyth oracle contract for local testing"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
schemars.workspace = true
serde.workspace = true
hex.workspace = true

stone-types = { path = "../../packages/types" }
